# warpengine

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
Components/: BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  Collider.cpp  Collider.h  Components.h  Ellipse.cpp  Ellipse.h  FilledEllipse.cpp  FilledEllipse.h  FilledRectangle.cpp  FilledRectangle.h  FilledTriangle.cpp  FilledTriangle.h  PlayerMovement.cpp  PlayerMovement.h  Rectangle.cpp  Rectangle.h  Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  Triangle.cpp  Triangle.h
Components/Button/: Button.h
Components/Character/: PlayerMovement.cpp  PlayerMovement.h  Rigidbody.cpp  Rigidbody.h
Components/Collider/: Collider.h
Components/Ellipse/: Ellipse.cpp  Ellipse.h  FilledEllipse.cpp
Components/Image/: Image.cpp
Components/Rectangle/: FilledRectangle.h  Rectangle.cpp  Rectangle.h
Components/Text/: Text.cpp
Components/Triangle/: FilledTriangle.h  Triangle.h
Core/: Game.cpp  Game.h
Rendering/: Drawer.cpp  Drawer.h
Types/: Component.h  Event.h  EventType.h  Keys.h  Object.cpp  Object.h  Rect.h  Scene.cpp  Types.h  Vector2.h  WindowSettings.h  WindowType.h
src/: Game.cpp  Game.h  Point.h  RGB.h  WarpEngine.h  game.cpp  game.h  warpengine.cpp  warpengine.h
src/Components/: BoxCollider.cpp  Button.cpp  Button.h  Components.h  Ellipse.cpp  Ellipse.h  FilledEllipse.cpp  FilledEllipse.h  FilledRectangle.cpp  FilledRectangle.h  Rectangle.cpp  Rectangle.h
src/Core/: Game.cpp  (+1 more)
(+30 files in other folders)
